--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@react-email/components": "^0.0.7",
     "@react-email/tailwind": "^0.0.8",
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
@@ -28,10 +26,12 @@
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.5"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@types/react-vertical-timeline-component": "^3.3.3"
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.1",
+    "@types/react-vertical-timeline-component": "^3.3.3",
+    "typescript": "5.4.5"
   }
 }
